MOCPParser.py
# Generated from MOCP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MOCPParser ( Parser ):

    grammarFileName = "MOCP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inteiro'", "'real'", "'vazio'", "'principal'", 
                     "'se'", "'senao'", "'enquanto'", "'para'", "'retornar'", 
                     "'ler'", "'lerc'", "'lers'", "'escrever'", "'escreverc'", 
                     "'escreverv'", "'escrevers'", "'int'", "'double'", 
                     "'void'", "'main'", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'read'", "'readc'", "'reads'", "'write'", 
                     "'writec'", "'writev'", "'writes'", "'struct'", "'#include'", 
                     "'#define'", "'&&'", "'||'", "'!'", "'<='", "'>='", 
                     "'=='", "'!='", "'<'", "'>'", "'++'", "'--'", "'+='", 
                     "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'" ]

    symbolicNames = [ "<INVALID>", "INTEIRO", "REAL", "VAZIO", "PRINCIPAL", 
                      "SE", "SENAO", "ENQUANTO", "PARA", "RETORNAR", "LER", 
                      "LERC", "LERS", "ESCREVER", "ESCREVERC", "ESCREVERV", 
                      "ESCREVERS", "C_INT", "C_DOUBLE", "C_VOID", "C_MAIN", 
                      "C_IF", "C_ELSE", "C_WHILE", "C_FOR", "C_RETURN", 
                      "C_READ", "C_READC", "C_READS", "C_WRITE", "C_WRITEC", 
                      "C_WRITEV", "C_WRITES", "C_STRUCT", "C_INCLUDE", "C_DEFINE", 
                      "AND", "OR", "NOT", "LE", "GE", "EQ", "NE", "LT", 
                      "GT", "OP_PLUSPLUS", "OP_MINUSMINUS", "OP_PLUSEQ", 
                      "OP_MINUSEQ", "OP_MULEQ", "OP_DIVEQ", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "SEMI", 
                      "REAL_LITERAL", "INT_LITERAL", "STRING_LITERAL", "UNCLOSED_STRING", 
                      "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_prototype = 1
    RULE_globalDecl = 2
    RULE_functionDef = 3
    RULE_functionName = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_arraySuffix = 7
    RULE_block = 8
    RULE_varDecl = 9
    RULE_varItem = 10
    RULE_arrayInit = 11
    RULE_stmt = 12
    RULE_assignStmt = 13
    RULE_ifStmt = 14
    RULE_whileStmt = 15
    RULE_forStmt = 16
    RULE_forInit = 17
    RULE_forCond = 18
    RULE_forUpdate = 19
    RULE_returnStmt = 20
    RULE_callStmt = 21
    RULE_writeStmt = 22
    RULE_condExpr = 23
    RULE_logicalOrExpr = 24
    RULE_logicalAndExpr = 25
    RULE_logicalNotExpr = 26
    RULE_relationalExpr = 27
    RULE_relOp = 28
    RULE_expr = 29
    RULE_additiveExpr = 30
    RULE_multiplicativeExpr = 31
    RULE_unaryExpr = 32
    RULE_castExpr = 33
    RULE_primaryExpr = 34
    RULE_location = 35
    RULE_inputCall = 36
    RULE_userFunctionCall = 37
    RULE_argList = 38
    RULE_literal = 39
    RULE_returnType = 40
    RULE_varType = 41
    RULE_castType = 42

    ruleNames =  [ "program", "prototype", "globalDecl", "functionDef", 
                   "functionName", "paramList", "param", "arraySuffix", 
                   "block", "varDecl", "varItem", "arrayInit", "stmt", "assignStmt", 
                   "ifStmt", "whileStmt", "forStmt", "forInit", "forCond", 
                   "forUpdate", "returnStmt", "callStmt", "writeStmt", "condExpr", 
                   "logicalOrExpr", "logicalAndExpr", "logicalNotExpr", 
                   "relationalExpr", "relOp", "expr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "castExpr", "primaryExpr", "location", "inputCall", 
                   "userFunctionCall", "argList", "literal", "returnType", 
                   "varType", "castType" ]

    EOF = Token.EOF
    INTEIRO=1
    REAL=2
    VAZIO=3
    PRINCIPAL=4
    SE=5
    SENAO=6
    ENQUANTO=7
    PARA=8
    RETORNAR=9
    LER=10
    LERC=11
    LERS=12
    ESCREVER=13
    ESCREVERC=14
    ESCREVERV=15
    ESCREVERS=16
    C_INT=17
    C_DOUBLE=18
    C_VOID=19
    C_MAIN=20
    C_IF=21
    C_ELSE=22
    C_WHILE=23
    C_FOR=24
    C_RETURN=25
    C_READ=26
    C_READC=27
    C_READS=28
    C_WRITE=29
    C_WRITEC=30
    C_WRITEV=31
    C_WRITES=32
    C_STRUCT=33
    C_INCLUDE=34
    C_DEFINE=35
    AND=36
    OR=37
    NOT=38
    LE=39
    GE=40
    EQ=41
    NE=42
    LT=43
    GT=44
    OP_PLUSPLUS=45
    OP_MINUSMINUS=46
    OP_PLUSEQ=47
    OP_MINUSEQ=48
    OP_MULEQ=49
    OP_DIVEQ=50
    PLUS=51
    MINUS=52
    MUL=53
    DIV=54
    MOD=55
    ASSIGN=56
    LPAREN=57
    RPAREN=58
    LBRACE=59
    RBRACE=60
    LBRACK=61
    RBRACK=62
    COMMA=63
    SEMI=64
    REAL_LITERAL=65
    INT_LITERAL=66
    STRING_LITERAL=67
    UNCLOSED_STRING=68
    ID=69
    LINE_COMMENT=70
    BLOCK_COMMENT=71
    WS=72
    ERROR_CHAR=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MOCPParser.EOF, 0)

        def prototype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.PrototypeContext)
            else:
                return self.getTypedRuleContext(MOCPParser.PrototypeContext,i)


        def globalDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.GlobalDeclContext)
            else:
                return self.getTypedRuleContext(MOCPParser.GlobalDeclContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(MOCPParser.FunctionDefContext,i)


        def getRuleIndex(self):
            return MOCPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MOCPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self.prototype() 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 92
                    self.globalDecl() 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 98
                self.functionDef()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(MOCPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(MOCPParser.ReturnTypeContext,0)


        def functionName(self):
            return self.getTypedRuleContext(MOCPParser.FunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(MOCPParser.ParamListContext,0)


        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MOCPParser.SEMI, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_prototype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototype" ):
                listener.enterPrototype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototype" ):
                listener.exitPrototype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototype" ):
                return visitor.visitPrototype(self)
            else:
                return visitor.visitChildren(self)




    def prototype(self):

        localctx = MOCPParser.PrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prototype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.returnType()
            self.state = 107
            self.functionName()
            self.state = 108
            self.match(MOCPParser.LPAREN)
            self.state = 109
            self.paramList()
            self.state = 110
            self.match(MOCPParser.RPAREN)
            self.state = 111
            self.match(MOCPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MOCPParser.VarDeclContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_globalDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDecl" ):
                listener.enterGlobalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDecl" ):
                listener.exitGlobalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDecl" ):
                return visitor.visitGlobalDecl(self)
            else:
                return visitor.visitChildren(self)




    def globalDecl(self):

        localctx = MOCPParser.GlobalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_globalDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.varDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(MOCPParser.ReturnTypeContext,0)


        def functionName(self):
            return self.getTypedRuleContext(MOCPParser.FunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(MOCPParser.ParamListContext,0)


        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MOCPParser.BlockContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = MOCPParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.returnType()
            self.state = 116
            self.functionName()
            self.state = 117
            self.match(MOCPParser.LPAREN)
            self.state = 118
            self.paramList()
            self.state = 119
            self.match(MOCPParser.RPAREN)
            self.state = 120
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINCIPAL(self):
            return self.getToken(MOCPParser.PRINCIPAL, 0)

        def ID(self):
            return self.getToken(MOCPParser.ID, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionName" ):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def functionName(self):

        localctx = MOCPParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not(_la==4 or _la==69):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAZIO(self):
            return self.getToken(MOCPParser.VAZIO, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.ParamContext)
            else:
                return self.getTypedRuleContext(MOCPParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.COMMA)
            else:
                return self.getToken(MOCPParser.COMMA, i)

        def getRuleIndex(self):
            return MOCPParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MOCPParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(MOCPParser.VAZIO)
                pass
            elif token in [1, 2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.param()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==63:
                    self.state = 126
                    self.match(MOCPParser.COMMA)
                    self.state = 127
                    self.param()
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(MOCPParser.VarTypeContext,0)


        def ID(self):
            return self.getToken(MOCPParser.ID, 0)

        def arraySuffix(self):
            return self.getTypedRuleContext(MOCPParser.ArraySuffixContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MOCPParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.varType()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==69:
                self.state = 136
                self.match(MOCPParser.ID)


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 139
                self.arraySuffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(MOCPParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MOCPParser.RBRACK, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_arraySuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySuffix" ):
                listener.enterArraySuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySuffix" ):
                listener.exitArraySuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySuffix" ):
                return visitor.visitArraySuffix(self)
            else:
                return visitor.visitChildren(self)




    def arraySuffix(self):

        localctx = MOCPParser.ArraySuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraySuffix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MOCPParser.LBRACK)
            self.state = 143
            self.match(MOCPParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MOCPParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MOCPParser.RBRACE, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(MOCPParser.VarDeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.StmtContext)
            else:
                return self.getTypedRuleContext(MOCPParser.StmtContext,i)


        def getRuleIndex(self):
            return MOCPParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MOCPParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MOCPParser.LBRACE)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==2:
                self.state = 146
                self.varDecl()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 576460752303547312) != 0) or _la==64 or _la==69:
                self.state = 152
                self.stmt()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(MOCPParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(MOCPParser.VarTypeContext,0)


        def varItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.VarItemContext)
            else:
                return self.getTypedRuleContext(MOCPParser.VarItemContext,i)


        def SEMI(self):
            return self.getToken(MOCPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.COMMA)
            else:
                return self.getToken(MOCPParser.COMMA, i)

        def getRuleIndex(self):
            return MOCPParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):
